Fix column alignment. Add JS variables and intial jQuery text return functions.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,7 @@ body {
   text-align: center;
   font-family: sans-serif;
 }
+
+/* .col-md-3 {
+  height: 250px;
+} */
